<resources>
    <string name="app_name">PlaygroundAnd</string>
    <string name="quiz_mode">퀴즈모드</string>
    <string name="store_ui_state_sample">store ui state sample</string>
    <string name="attrs_with_databinding_sample">attrs with databinding sample</string>
    <string name="dynamic_lines_sample">dynamic lines sample</string>
    <string name="fill">fill</string>
    <string name="del">del</string>
    <string name="quiz_mode_flow_sample">quiz mode flow sample</string>
    <string name="select_word">Select word</string>
    <string name="select_meaning">Select meaning</string>
    <string name="spelling">Spelling</string>
    <string name="play">play</string>
</resources>
