<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkbox_select_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_word"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/checkbox_select_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_meaning"
        app:layout_constraintTop_toBottomOf="@id/checkbox_select_word"/>

    <CheckBox
        android:id="@+id/checkbox_spelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spelling"
        app:layout_constraintTop_toBottomOf="@id/checkbox_select_meaning"/>

    <Button
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/play"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>